# powertradeai-django

./: .gitignore  README.md  pyproject.toml
dev_project/: manage.py
dev_project/config/: settings.py  urls.py  wsgi.py
powerTradeAi_djangoApp/: DEPLOY.md  README.md  admin.py  apps.py  auth.py  dashboard.py  models.py  urls.py
powerTradeAi_djangoApp/agent/: __init__.py  autopilot.py  llm.py  resolver.py  runner.py  skills.py  training.py
powerTradeAi_djangoApp/api/: serializers.py  urls.py  views.py
powerTradeAi_djangoApp/data/: __init__.py  alpaca_provider.py  base.py  hybrid.py  thetadata_cloud.py
powerTradeAi_djangoApp/engine/: __init__.py  golden.py  replay.py  scanner.py  session.py
powerTradeAi_djangoApp/management/commands/: agent_loop.py  check_provider.py  compare_golden.py  create_api_key.py  replay_day.py  replay_range.py  resolve_training.py  run_agent.py  scan_loop.py  scan_once.py  seed_strategies.py  train_agent.py
powerTradeAi_djangoApp/migrations/: 0001_initial.py  0002_remove_alert_uniq_alert_per_strategy_session_direction_and_more.py  0003_agentrun_alter_alert_source_alert_agent_run_and_more.py  0004_agentnote.py  0005_agenttrigger.py  0006_remove_alert_uniq_alert_per_strategy_session_direction_source_and_more.py  0007_agentanalysis_as_of_agentanalysis_mode_and_more.py
powerTradeAi_djangoApp/strategies/: __init__.py  aggression.py  base.py  bb_midpoint.py  indicators.py  orb15.py  prevclose.py
powerTradeAi_djangoApp/templates/powertradeai/: agent.html  chart.html  dashboard.html
powerTradeAi_djangoApp/tests/: conftest.py  test_drf_independence.py  test_engine.py  test_golden_comparator.py  test_replay_isolation.py  test_web_footprint.py  urls.py
